# numerax

./: .gitignore  README.md  get_weights.py  pipeline_log.txt  plots.py  run_ensemble.py  sample.py
Integrated-_Stock_Screener_RiskMetrics/: README.md
Integrated-_Stock_Screener_RiskMetrics/Populate-MongoDB/: .env.example  README.md  index.html  package-lock.json  package.json  s&p_500_array.txt
Integrated-_Stock_Screener_RiskMetrics/Populate-MongoDB/src/: app.js  db.js  server.js
Integrated-_Stock_Screener_RiskMetrics/Stock-Screener-MERN-Front-End/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.server.json
Integrated-_Stock_Screener_RiskMetrics/Stock-Screener-MERN-Front-End/public/: index.html
Integrated-_Stock_Screener_RiskMetrics/Stock-Screener-MERN-Front-End/src/: App.tsx  Router.jsx  Styles.css  dashboard.css  index.js
Integrated-_Stock_Screener_RiskMetrics/backend/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_old  README.md  cert.pem  key.pem  package-lock.json  package.json  vcpkg-configuration.json  vcpkg.json
Integrated-_Stock_Screener_RiskMetrics/backend/src/: db.ts  index.ts  server.ts
Integrated-_Stock_Screener_RiskMetrics/backend/src/Controllers/: company.controller.js  crypto_data.js  crypto_data_2.js  riskMetrics.controller.ts
Integrated-_Stock_Screener_RiskMetrics/backend/src/bindings/: index.ts  riskMetrics.ts
Integrated-_Stock_Screener_RiskMetrics/backend/src/cpp/: README.md  addon.cpp  risk_metrics_bindings.cpp  risk_metrics_bindings.hpp  statistics_bindings.cpp  test.cpp  test.hpp
Integrated-_Stock_Screener_RiskMetrics/backend/src/cpp/Reports/: BSModel.cpp  BSModel.hpp  Bonds.hpp  CMakeLists.txt  CSVParser.cpp  CSVParser.hpp  MonteCarlo.h  Portfolio_Asset.cpp  Portfolio_Asset.h  Solver.h  Statistics.cpp  Statistics.h  VaR.h  hello.cpp  hello.hpp
Integrated-_Stock_Screener_RiskMetrics/backend/src/models/: companies.model.js  crypto.model.js  day_historical_data.model.ts
Integrated-_Stock_Screener_RiskMetrics/backend/src/routes/: companyDetails.js  crypto_data.js  getData.ts
Integrated-_Stock_Screener_RiskMetrics/backend/src/services/: historicalDataServices.ts
Integrated-_Stock_Screener_RiskMetrics/stock_screener_vite/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Integrated-_Stock_Screener_RiskMetrics/stock_screener_vite/src/: main.tsx
Reinforcement-Learning/: .gitignore  Home.py  README.md  custom_ensemble.py  docker-compose.yml  plots.py  requirements.txt  run_ensemble.py
Reinforcement-Learning/Backend/: requirements.txt
Reinforcement-Learning/Backend/alembic/: env.py
Reinforcement-Learning/Backend/app/: main.py
Reinforcement-Learning/pages/: 1_Model_Information.py  2_Graph_Explanation.py  3_Running_Application.py  4_Results.py
backend/: Dockerfile  Running_Application.py  alembic.ini  best_worst_performers.py  main.py  plots.py  requirements.txt  run_ensemble.py  test_pipeline.py
backend/alembic/: env.py
backend/app/: main.py
backend/routes/: dashboard.py  graphs.py  pipeline.py  results.py
datasets/: account_value.csv
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
pages/: 3_Running_Application.py
results/: account_rewards_trade_ensemble_40.csv  account_rewards_trade_ensemble_60.csv  account_rewards_trade_ensemble_80.csv  account_rewards_validation_a2c_40.csv  account_rewards_validation_a2c_60.csv  account_rewards_validation_a2c_80.csv  account_value_trade_ensemble_40.csv  account_value_trade_ensemble_60.csv  account_value_trade_ensemble_80.csv  account_value_validation_a2c_40.csv  account_value_validation_a2c_60.csv  account_value_validation_a2c_80.csv  actions_trade_ensemble_40.csv  actions_trade_ensemble_60.csv  actions_trade_ensemble_80.csv  actions_validation_a2c_40.csv  actions_validation_a2c_60.csv  actions_validation_a2c_80.csv  last_state_ensemble_19.csv  model_kwargs.json  summary.csv
runs/: pipeline_log.txt
uploads/: company.xlsx  stock_data.csv
(+131 files in other folders)
